	- More sensible placing of the submit button on /v+/tagmod
	- Improved VN relations:
	  - Removed: summary, full story
	  - Added: same series, fandisc, original game
	  - Renamed: same characters to shares characters
	  - Merged: alternative setting into alternative version, and other into same series
	- Allow empty VN descriptions

2.6 - 2009-08-09
	- New screen resolutions: 1024x600 and 1600x1200
	- Rewritten authentication system
	- New language: Vietnamese
	- Complete rewrite of Multi
	  - Asynchronous communication with PostgreSQL
	  - Got rid of the shared memory
	  - No more $self->multiCmd in the VNDB code
	  - Extended IRC bot functionality
	  - Tag cache regenerated daily rather than hourly
	- Added OpenSearch plugin + autodetection
	- Converted font size units to px in the css
	- Added double-post prevention
	- Converted old categories to tags and removed last traces of the category system
	- Converted all date/time columns to timestamptz

2.5 - 2009-07-09
	- Hide NSFW images in diff viewer (unless NSFW warnings are disabled)
	- Display related boards in recent posts tooltip op homepage
	- Added search box on user list
	- Proper support for multilingual releases
	- Copy-add release feature
	- Automatically fill out title & original title when adding a release
	- Separated VN search filters from search box
	- Tag filers on VN search
	- Posts browser on user pages
	- Keep track of the user who created a tag

2.4 - 2009-06-07
	- Release search + browser + filters
	- Javascript date input
	- More release information:
	  - Screen resolution
	  - Voiced
	  - Freeware/doujin
	  - Animated
	- Show comparable CERO ratings on /r+/edit input field
	- Allow search queries with only one character
	- Removed category filter from /v/all
	- Added expand/collapse feature to the history browser
	- Added tabs on v/r/p/g search fields

2.3 - 2009-04-01
	- No page reload needed when changing rlist status from vn page
	- Random VN quotes to the footer of every page