@@ -1139,6 +1139,7 @@ a .icons { cursor: pointer }
 .icons.sfc { background-position:   0px -56px; }
 .icons.gba { background-position:   0px -70px; }
 .icons.ps3 { background-position:   0px -84px; }
+.icons.p98 { background-position:   0px -98px; }
 
 .icons.dvd { background-position: -16px   0px; }
 .icons.mac { background-position: -16px -14px; }
@@ -1147,6 +1148,7 @@ a .icons { cursor: pointer }
 .icons.win { background-position: -16px -56px; }
 .icons.wii { background-position: -16px -70px; }
 .icons.xb3 { background-position: -16px -84px; }
+.icons.sat { background-position: -16px -98px; }
 
 .icons.rt0 { background-position: -32px   0px; }
 .icons.rt1 { background-position: -32px -14px; }
@@ -1154,8 +1156,7 @@ a .icons { cursor: pointer }
 .icons.ext { background-position: -32px -42px; }
 .icons.msx { background-position: -32px -56px; }
 .icons.nes { background-position: -32px -70px; }
-
-.icons.vi  { background-position: -34px -88px; }
+.icons.dos { background-position: -32px -84px; }
 
 .icons.cs  { background-position: -48px   0px; }
 .icons.da  { background-position: -48px -11px; }
@@ -1176,4 +1177,5 @@ a .icons { cursor: pointer }
 .icons.tr  { background-position: -61px -66px; }
 .icons.zh  { background-position: -61px -77px; }
 .icons.ko  { background-position: -61px -88px; }
+.icons.vi  { background-position: -61px -99px; }
 
