@@ -9,6 +9,7 @@ git - ?
 	  - Renamed: same characters to shares characters
 	  - Merged: alternative setting into alternative version, and other into same series
 	- Allow empty VN descriptions
+	- New platforms: DOS, PC-98, Sega Saturn
 
 2.6 - 2009-08-09
 	- New screen resolutions: 1024x600 and 1600x1200
